# starscapeAI

./: .gitignore  CLAUDE.md  README.md  game.db  game.db-shm  game.db-wal  history.txt  jumproutes.dot  pyproject.toml
.claude/: settings.json
RPG/handouts/: nhaveth-handout (1).md
articles/: golvhaan.md  humans.md  kraathi.md  kreeth.md  nhaveth.md  shekhari.md  vardhek.md  vashori.md  vrekkai.md
scripts/: analyze_completeness.py  compute_metrics.py  compute_orbits.py  empire_viewer.py  example.py  fill_biosphere_ratings.py  fill_spectral.py  fill_stars.py  fill_temperature_extremes.py  find_min_jump.py  generate_atmosphere.py  generate_homeworld_prose.py  generate_jumproute_dot.py  generate_planets.py  generate_planets_wbh.py  generate_star_orbits_wbh.py  generate_system_velocities.py  history_report.py  init_systems.py  migrate_bodies_wbh.py  run_sim.py  seed_homeworlds.py  seed_sol.py  seed_species.py  seed_star_names.py  seed_system_velocities.py  star_viewer.py  system_viewer.py
specs/: _template.md  analysis_session_guide.md  datadictionary.md  game_db_dictionary.md  generation_test_5systems.md  greatspace4x.md  histories_run9_tick2858.md  orbits.md  roadmap.md  system_orbital_data.md
sql/: schema.sql  schema_game.sql
tests/: test_db.py  test_m0_schema.py  test_m10_bombardment_assault.py  test_m11_decision.py  test_m12_world.py  test_m13_simulation.py  test_m1_names.py  test_m2_world.py  test_m3_state_polity.py  test_m4_military.py  test_m5_init.py  test_m6_economy.py  test_m7_intel_control.py  test_m8_movement.py  test_m9_combat.py  test_orbits.py
(+104 files in other folders)
